--------------------------
Darshan Release Change Log
--------------------------

darshan-2.1.0
=============
* additinoal environment variables to control log, jobid and
  alignment parameters
* additional configure tests to improve portability
* bug fixes for darshan-parser --perf calucations
* support for MPI1.x
* support for OpenMPI
* support for PGI, Intel compilers
* new libdarshan.so dynamic library for use with LD_PRELOAD

darshan-2.0.2
=============
* added a random identifier to job logs (to avoid collisions from multiple
  application instances within a single scheduler job)
* improved installation and library path management for darshan-job-summary.pl
* improved error handling in darshan-job-summary.pl
* additional derived statistics categories for darshan-parser output:
    --all   : all sub-options are enabled
    --base  : darshan log field data [default]
    --file  : total file counts
    --perf  : derived perf data
    --total : aggregated darshan field data

darshan-2.0.1
=============
* bug fix to variance/minimum calculations on shared files
* switch to automatic generation of all MPI compiler scripts using
  darshan-gen-* tools
* new run time environment variable: DARSHAN_INTERNAL_TIMING.  If set at job
  execution time, it will cause Darshan to time its own internal data 
  aggregation routines and print the results to stdout at rank 0.

darshan-2.0.0
=============
* new output file format that is portable across architectures
  NOTE: Darshan 1.x output files are incompatible with the tools in this 
  release unless they were generated on a ppc32 architecture (Blue Gene)
* 8 new counters that record the rank of the fastest and slowest process that
  opened each shared file, along with the number of seconds and number of
  bytes consumed by those processes.  It also reports the variance in both
  time and amount of data.
* new --with-jobid-env configure argument to support recording job identifiers
  from different schedulers