@@ -58,6 +58,17 @@ AC_ARG_WITH(zlib-for-mpi,
     fi
 )
 
+AC_ARG_WITH(log-path-by-env,
+[  --with-log-path-by-env=<env var list> Comma separated list of environment variables to check for log path location before --with-log-path path],
+    if test x$withval = xyes; then
+        AC_MSG_ERROR(--with-log-path-by-env must be given at least one variable name)
+    else
+        AC_DEFINE_UNQUOTED(__CP_LOG_ENV, "${withval}", Comma separated list of env. variables to use for log path)
+        __CP_LOG_ENV="${withval}"
+        GOT_LOG_PATH=1
+    fi
+)
+
 AC_ARG_WITH(log-path,
 [  --with-log-path=<path>  Location to store log files at run time],
     if test x$withval = xyes; then
@@ -89,7 +100,7 @@ if test x$GOT_ALIGNMENT != x1; then
     AC_MSG_ERROR(must provide --with-mem-align=<num> argument to configure.)
 fi
 if test x$GOT_LOG_PATH != x1; then
-    AC_MSG_ERROR(must provide --with-log-path=<path> argument to configure.)
+    AC_MSG_ERROR(must provide --with-log-path=<path> _or_ --with-log-path-by-env=<variable list> argument to configure.)
 fi
 if test x$GOT_JOBID != x1; then
     AC_MSG_ERROR(must provide --with-jobid-env=<name> argument to configure.)
