@@ -81,6 +81,9 @@
 # endif
 #endif
 
+/* Comma separated list of env. variables to use for log path */
+#undef __CP_LOG_ENV
+
 /* Location to store log files at run time */
 #undef __CP_LOG_PATH
 
